# DT_Traffic_Backend

./: .env.example  README.md  pyproject.toml
ai/: __init__.py
data/: segments_mock.json
data_pipeline/: __init__.py  build_train_table.py  http_ssl.py
dt_traffic_project.egg-info/: SOURCES.txt  requires.txt
integrations/: __init__.py  env.py  its.py
scripts/: run_server.py
server/: __init__.py  app.py  config.py
server/schemas/: __init__.py
