[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dt-traffic-project"
version = "0.1.0"
description = "Traffic prediction digital twin server and data pipeline"
requires-python = ">=3.10"
dependencies = [
 "flask>=3.0,<4.0",
 "python-dotenv>=1.0,<2.0",
 "pandas>=2.2,<3.0",
 "numpy>=1.26,<3.0",
 "requests>=2.32,<3.0",
 "pyarrow>=22.0,<25.0",
 "scikit-learn>=1.5,<2.0",
 "lightgbm>=4.5,<5.0",
 "joblib>=1.4,<2.0",
 "pyproj>=3.6,<4.0",
 "pandas-stubs~=2.3.3",
]

[project.optional-dependencies]

dev = [
 "pytest>=8.0,<9.0",
]

geo = [
 "geopandas>=0.14,<2.0",
]

[tool.setuptools]

packages = ["ai", "data_pipeline", "integrations", "server"]
